another cleanup in progress manager